--- a/admin/index.html
+++ b/admin/index.html
@@ -9,25 +9,10 @@
     <link rel="stylesheet" type="text/css" href="../../css/adapter.css" />
     <script type="text/javascript" src="../../js/translate.js"></script>
     <script type="text/javascript" src="../../js/adapter-settings.js"></script>
+    <script type="text/javascript" src="words.js"></script>
 
     <script type="text/javascript">
         var bridges = [];
-        systemDictionary = {
-            "Loxone Miniserver adapter settings": {
-                "en": "Loxone Miniserver adapter settings",
-                "de": "Loxone Miniserver Adapter-Einstellungen",
-                "ru": "Настройки драйвера Loxone Miniserver"
-            },
-            "Miniserver Hostname / IP": { "en": "Miniserver Hostname / IP", "de": "Hostname /IP des Miniservers", "ru": "IP / Hostname Минисервера" },
-            "Miniserver Port": { "en": "Miniserver Port", "de": "Port des Miniservers", "ru": "Порт Минисервера" },
-            "Miniserver Username": { "en": "Miniserver Username", "de": "Benutzername des Miniservers", "ru": "Имя пользователя" },
-            "Miniserver Password": { "en": "Miniserver Password", "de": "Kennwort des Miniservers", "ru": "Пароль" },
-            "tooltip_host": { 
-                "en": "IP address of Loxone miniservers or DNS name", 
-                "de": "IP Adresse von Loxone Miniserver oder DNS-Name",
-                "ru": "IP Адрес или DNS имя Loxone Miniserver"
-            },
-        };
 
         function setValue(id, value, onChange) {
             // example: select elements with id=key and class=value and insert value
