Added optional support for synchronizing rooms and functions from Loxone.

--- a/admin/index.html
+++ b/admin/index.html
@@ -90,6 +90,15 @@
                     <td class="admin-icon"></td>
                     <td><input type="password" id="password" class="value"></td>
                 </tr>
+                <tr>
+                    <td class="translate">Synchronize</td>
+                    <td class="admin-icon"></td>
+                    <td><input type="checkbox" id="syncRooms" value="true" class="value"> <label class="translate" for="syncRooms">Rooms</label></td>
+                </tr>
+                <tr>
+                    <td colspan="2">&nbsp;</td>
+                    <td><input type="checkbox" id="syncFunctions" value="true" class="value"> <label class="translate" for="syncFunctions">Functions</label></td>
+                </tr>
             </table>
         </div>
     </div>
