--- a/admin/index.html
+++ b/admin/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="words.js"></script>
 
     <script type="text/javascript">
-        var bridges = [];
+        var bridges = []; // not related
 
         function setValue(id, value, onChange) {
             // example: select elements with id=key and class=value and insert value
