Trying to force Chrome to ignore this password field.

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="col s6 input-field">
-                    <input type="password" class="value" id="password" />
+                    <input type="password" autocomplete="off" class="value" id="password" />
                     <label for="password" class="translate">Miniserver Password</label>
                 </div>
             </div>
