--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -20,6 +20,10 @@
             function load(settings, onChange) {
                 // example: select elements with id=key and class=value and insert value
                 if (!settings) return;
+
+                // set defaults for newly added parameters
+                settings.weatherServer = settings.weatherServer || 'all';
+
                 $('.value').each(function () {
                     var $key = $(this);
                     var id = $key.attr('id');
@@ -103,6 +107,18 @@
                 <div class="col s3 input-field">
                     <input type="checkbox" class="value" id="syncFunctions" />
                     <label for="syncFunctions" class="translate">Functions</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s6 input-field">
+                    <select id="weatherServer" class="value">
+                        <option value="off" class="translate">Don't synchronize weather data</option>
+                        <option value="current" class="translate">Synchronize current weather only</option>
+                        <option value="1day" class="translate">Synchronize 24 hours of weather forcast</option>
+                        <option value="all" class="translate">Synchronize entire weather forcast</option>
+                    </select>
+                    <label for="weatherServer" class="translate">Weather Server</label>
                 </div>
             </div>
         </div>
